# estudo-ia-dev

./: .gitignore
fundamentos_gen_ai/: notas.md
fundamentos_gen_ai/groq-exemplo/: main.py  pyproject.toml
fundamentos_gen_ai/openai-exemplo/: main.py  pyproject.toml
fundamentos_rag/: notes.md
fundamentos_rag/example/: main.py  pyproject.toml
fundamentos_rag/example-docling/: 1-extraction.py  2-extraction-images.py  3-chunking.py  4-hybrid-chunker.py  5-metadados.py  6-embeddings.py  main.py  pyproject.toml
fundamentos_rag/example-vector-db/: main.py  pyproject.toml
system_retrieval/: notes.md  pyproject.toml  tokenization-01.py  tokenization-02.py  tokenization-03.py  tokenization-04.py
