[project]
name = "curso-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "docling>=2.63.0",
    "edgartools>=4.20.1",
    "fastapi>=0.119.1",
    "groq>=0.32.0",
    "hdbscan>=0.8.40",
    "langextract>=1.0.9",
    "mem0ai",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "qdrant-client[fastembed]>=1.15.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "uvicorn>=0.38.0",
    "whoosh>=2.7.4",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.uv.sources]
mem0ai = { git = "https://github.com/mem0ai/mem0.git" }
